--- a/docker/Dockerfile.restore
+++ b/docker/Dockerfile.restore
@@ -1,8 +1,9 @@
 FROM mcr.microsoft.com/dotnet/core/sdk:2.2-alpine as builder
-ARG Configuration=Release
-COPY . /app
-WORKDIR /app
-RUN dotnet publish -c ${Configuration} -o publish
+WORKDIR /sln
+COPY ./RemindMeal.csproj  ./
+RUN dotnet restore
+COPY .* ./
+RUN dotnet publish -c ${Configuration} -o publish --no-restore
 
 FROM mcr.microsoft.com/dotnet/core/aspnet:2.2
 COPY --from=builder /app/publish /app/
