--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,8 +1,11 @@
 FROM mcr.microsoft.com/dotnet/core/sdk:2.2-alpine as builder
-ARG Configuration=Release
-COPY . /app
 WORKDIR /app
-RUN dotnet publish -c ${Configuration} -o publish
+COPY RemindMeal.csproj  ./
+RUN dotnet restore
+
+COPY * ./
+ARG Configuration=Release
+RUN dotnet publish -c ${Configuration} -o publish --no-restore
 
 FROM mcr.microsoft.com/dotnet/core/aspnet:2.2
 COPY --from=builder /app/publish /app/
