--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,19 +2,15 @@ version: '3'
 
 services:
   app:
-    image: edouardberthe/remindmeal:test
+    image: edouardberthe/remindmeal:dev
     ports:
       - 80:80
     depends_on:
       - db
-    networks:
-      - net
   db:
     image: postgres:alpine
     volumes:
       - data:/var/lib/postgresql/data
-    networks:
-      - net
     environment:
       POSTGRES_USER: remindmeal
       POSTGRES_PASSWORD: remindmeal
@@ -22,6 +18,4 @@ services:
 
 volumes:
   data:
-
-networks:
-  net:
+  
