--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,15 +2,19 @@ version: '3'
 
 services:
   app:
-    image: edouardberthe/remindmeal:dev
+    image: edouardberthe/remindmeal
     ports:
-      - 80:80
+      - 9001:80
+    networks: 
+      - net
     depends_on:
       - db
   db:
     image: postgres:alpine
     volumes:
       - data:/var/lib/postgresql/data
+    networks:
+      - net
     environment:
       POSTGRES_USER: remindmeal
       POSTGRES_PASSWORD: remindmeal
@@ -18,4 +22,6 @@ services:
 
 volumes:
   data:
-  
+
+networks:
+  net:
