--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     depends_on:
       - db
   db:
-    image: postgres:alpine
+    image: postgres:11.5-alpine
     volumes:
       - data:/var/lib/postgresql/data
     networks:
