--- a/RemindMeal.csproj
+++ b/RemindMeal.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0" />
