--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -4,9 +4,7 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v1
       - name: Setup .NET Core
@@ -16,5 +14,14 @@ jobs:
       - name: Launch tests
         run: dotnet test
       - name: Build with dotnet
-        run: dotnet build --configuration Release --project src/RemindMeal.csproj
-      
+        run: dotnet build --configuration Release src/RemindMeal.csproj
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 3.1.100
+      - name: Launch tests
+        run: dotnet test
