Updates Docker config with new arborescence

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,8 +4,7 @@ COPY RemindMeal.csproj  ./
 RUN dotnet restore
 
 COPY . .
-ARG Configuration=Release
-RUN dotnet publish -c ${Configuration} -o publish --no-restore
+RUN dotnet publish -c Release -o publish --no-restore
 
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.0-alpine
 COPY --from=builder /app/publish /app/
