Modifies Dockerfile context for DockerHub build + fix bug

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,12 +1,13 @@
 FROM mcr.microsoft.com/dotnet/core/sdk:3.0-alpine as builder
 WORKDIR /app
-COPY RemindMeal.csproj  ./
+
+COPY src/RemindMeal.csproj  ./
 RUN dotnet restore
 
-COPY . .
+COPY src/ .
 RUN dotnet publish -c Release -o publish --no-restore
 
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.0-alpine
 COPY --from=builder /app/publish /app/
 WORKDIR /app
-ENTRYPOINT dotnet RemindMeal.dll
+ENTRYPOINT ["dotnet", "RemindMeal.dll"]
