--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -41,7 +41,9 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           IMAGE_NAME: remindmeal/remindmeal
       - name: Build :latest
-        run: docker build -t remindmeal/remindmeal:latest -f docker/Dockerfile .
+        uses: actions-hub/docker@master
+        with:
+          args: build -t remindmeal/remindmeal:latest -f docker/Dockerfile .
       - name: Push to docker hub :latest
         uses: actions-hub/docker@master
         with:
