--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -34,6 +34,7 @@ jobs:
     name: Docker Push
     runs-on: [ubuntu-latest]
     steps:
+      - uses: actions/checkout@v2
       - name: Build & Push to Docker Hub
         uses: opspresso/action-docker@master
         env:
