--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -15,20 +15,17 @@ jobs:
         with:
           dotnet-version: 3.1.100
       
-      - name: Build with dotnet
+      - name: Release Build
         run: dotnet build --configuration Release src/RemindMeal.csproj
 
-  test:
-    name: Test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Setup .NET Core
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 3.1.100
+      - name: Debug Build
+        run: dotnet build --configuration Release src/RemindMeal.csproj
+
       - name: Launch tests
         run: dotnet test
+      
+      - name: Run
+        run: dotnet run
 
   push:
     name: Docker Push
@@ -42,5 +39,3 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           workdir: docker
-          context: .
-
