--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -23,9 +23,6 @@ jobs:
 
       - name: Launch tests
         run: dotnet test
-      
-      - name: Run
-        run: dotnet run
 
   push:
     name: Docker Push
@@ -38,4 +35,5 @@ jobs:
           name: remindmeal/remindmeal
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          workdir: docker
+          workdir: ./docker/
+          context: ./
