--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -34,11 +34,17 @@ jobs:
       - name: Tests
         if: success()
         run: dotnet test --no-build
-      
-      - name: Push to DockerHub
-        if: success() && github.event_name == 'push'
-        uses: elgohr/Publish-Docker-Github-Action@v5
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
-          name: remindmeal/remindmeal
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: remindmeal/remindmeal:test
