--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -21,30 +21,32 @@ jobs:
         uses: actions/setup-dotnet@v2
         with:
           dotnet-version: '6.0.x'
-      
+
       - name: Restoring dependencies
         run: dotnet restore
-      
+
       - name: Build in Release
         run: dotnet build --no-restore --configuration Release src/RemindMeal.csproj
-      
+
       - name: Build in Debug with dotnet
         run: dotnet build --no-restore --configuration Debug
-      
+
       - name: Tests
         if: success()
         run: dotnet test --no-build
 
       - name: Login to Docker Hub
+        if: success()
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push
+        if: success()
         uses: docker/build-push-action@v4
         with:
           context: .
           file: ./Dockerfile
           push: true
-          tags: remindmeal/remindmeal:test
+          tags: remindmeal/remindmeal:latest
