--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Sets env vars for PR
         if: env.GITHUB_REF != 'master'
         run: |
-          echo "DOCKER_IMAGE_TAG=${{ github.event.number }}" >> $GITHUB_ENV
+          echo "DOCKER_IMAGE_TAG=pr${{ github.event.number }}" >> $GITHUB_ENV
 
       - name: Build and push
         if: success()
