--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -13,6 +13,9 @@ jobs:
   build-test-deploy:
     name: Build
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version: ['6.0.x', '7.0.x']
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -20,7 +23,7 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: '6.0.x'
+          dotnet-version: ${{ matrix.version }}
 
       - name: Restoring dependencies
         run: dotnet restore
