--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -13,9 +13,6 @@ jobs:
   build-test-deploy:
     name: Build
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        version: ['6.0.x', '7.0.x']
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -23,7 +20,7 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: ${{ matrix.version }}
+          dotnet-version: '6.0.x'
 
       - name: Restoring dependencies
         run: dotnet restore
