--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -3,10 +3,10 @@ name: .NET Core
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
 
@@ -26,7 +26,7 @@ jobs:
         run: dotnet restore
 
       - name: Build in Release
-        run: dotnet build --no-restore --configuration Release src/RemindMeal.csproj
+        run: dotnet build --no-restore --configuration Release RemindMeal/RemindMeal.csproj
 
       - name: Build in Debug with dotnet
         run: dotnet build --no-restore --configuration Debug
