--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -21,7 +21,10 @@
                 // Do not generate summary otherwise it leads to duplicate errors in Problems panel
                 "/consoleloggerparameters:NoSummary"
             ],
-            "group": "build",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
             "problemMatcher": "$msCompile"
         },
         {
@@ -36,7 +39,10 @@
                 "/consoleloggerparameters:NoSummary",
                 "--project", "src"
             ],
-            "group": "build",
+            "group": {
+                "kind": "build",
+                "isDefault": false
+            },
             "problemMatcher": "$msCompile"
         }
     ]
