--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -26,10 +26,7 @@ jobs:
         run: dotnet restore
 
       - name: Build in Release
-        run: dotnet build --no-restore --configuration Release RemindMeal/RemindMeal.csproj
-
-      - name: Build in Debug with dotnet
-        run: dotnet build --no-restore --configuration Debug
+        run: dotnet build --no-restore --configuration Release
 
       - name: Tests
         if: success()
