--- a/RemindMeal.Data/RemindMealData.csproj
+++ b/RemindMeal.Data/RemindMealData.csproj
@@ -7,7 +7,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.16"/>
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.16"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.16"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.19"/>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.8"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.19">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 </Project>
