--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,6 +1,4 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
     "version": "2.0.0",
     "presentation": {
         "echo": true,
@@ -55,6 +53,10 @@
                 "-d",
                 "postgres:13"
             ],
+            "presentation": {
+                "echo": false,
+                "reveal": "silent"
+            },
             "problemMatcher": []
         }
     ]
