--- a/RemindMeal.Data/RemindMealData.csproj
+++ b/RemindMeal.Data/RemindMealData.csproj
@@ -8,6 +8,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.16"/>
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.16"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.16"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.16">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.8"/>
   </ItemGroup>
 </Project>
