Change host from db to localhost in appsettings.json

--- a/RemindMeal.App/appsettings.json
+++ b/RemindMeal.App/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "db": "User ID=remindmeal;Password=remindmeal;Host=db;Port=5432;Database=remindmeal;"
+    "db": "User ID=remindmeal;Password=remindmeal;Host=localhost;Port=5432;Database=remindmeal;"
   },
   "Logging": {
     "LogLevel": {
