--- a/RemindMeal.Data/appsettings.Development.json
+++ b/RemindMeal.Data/appsettings.Development.json
@@ -1,10 +1,13 @@
+
 {
   "ConnectionStrings": {
     "db": "User ID=remindmeal;Password=remindmeal;Host=localhost;Port=5432;Database=remindmeal;"
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   }
 }
